--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "Bonnen Scannen": {
-    "laatste_versie": "1.39",
-    "geblokkeerd": false,
-    "update_verplicht": false,
+    "laatste_versie": "1.40",
+    "geblokkeerd": true,
+    "update_verplicht": true,
     "melding": "Update vereist. Download de nieuwste versie via www.jouwsite.nl"
   },
   "programma2": {
