--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "laatste_versie": "1.39",
     "geblokkeerd": false,
     "update_verplicht": true,
-    "melding": "Update vereist. Download de nieuwste versie via www.jouwsite.nl"
+    "melding": "Update vereist. Deze versie van "Bonnen Scannen" is verouderd en heeft onderhoud nodig."
   },
   "programma2": {
     "laatste_versie": "2.1.3",
