--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "geblokkeerd": false,
     "update_verplicht": true,
     "melding": "Update vereist. Deze versie is verouderd en heeft onderhoud nodig."
+    "key": "*BF3Es$VM<MrI}RKeuy`2%_f#4QQ3_!,,a0.2UZLd-c~KVOQPw}=.?F_;a~IVPs"
   },
   "Container Beheer": {
     "laatste_versie": "1.0.0",
