--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "laatste_versie": "1.39",
     "geblokkeerd": false,
     "update_verplicht": true,
-    "melding": "Update vereist. Deze versie is verouderd en heeft onderhoud nodig."
+    "melding": "Update vereist. Deze versie is verouderd en heeft onderhoud nodig.",
     "key": "abc123xyz"
   },
   "Container Beheer": {
