Update via config-editor

--- a/config.json
+++ b/config.json
@@ -12,5 +12,12 @@
     "update_verplicht": false,
     "melding": "Welkom! U gebruikt versie {huidige}.",
     "key": ""
+  },
+  "Labels Bestellen": {
+    "laatste_versie": "1.16",
+    "geblokkeerd": false,
+    "update_verplicht": false,
+    "melding": "Welkom! U gebruikt versie {huidige}.",
+    "key": "7ZKDeAVbCsp5"
   }
 }
