Update via config-editor

--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
   },
   "Labels Bestellen": {
     "laatste_versie": "1.16",
-    "geblokkeerd": false,
+    "geblokkeerd": true,
     "update_verplicht": false,
     "melding": "Welkom! U gebruikt versie {huidige}.",
     "key": "7ZKDeAVbCsp5"
