Update via config-editor

--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "geblokkeerd": true,
     "update_verplicht": true,
     "melding": "Welkom! U gebruikt versie {huidige}.",
-    "key": "3uqqQfP58Abc"
+    "key": "3uqqQfP58Abc1"
   },
   "Zeecontainers": {
     "laatste_versie": "1.0.0",
