Update via config-editor

--- a/config.json
+++ b/config.json
@@ -15,10 +15,10 @@
   },
   "Oud seizoen": {
     "laatste_versie": "1.3",
-    "geblokkeerd": true,
-    "update_verplicht": true,
+    "geblokkeerd": false,
+    "update_verplicht": false,
     "melding": "Welkom! U gebruikt versie {huidige}.",
-    "key": "3uqqQfP58Abc1"
+    "key": "3uqqQfP58Abc"
   },
   "Zeecontainers": {
     "laatste_versie": "1.0.0",
